# Sync_lip_project

./: .gitattributes  README.md
Sync_lip_API/: 0.22.0  Dockerfile  config.yaml  main.py  requirements.txt  setup.cfg
Sync_lip_API/lipsync_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Sync_lip_API/temp/: result.avi
Sync_lip_API/utils/: audio.py  inference.py
Sync_lip_WEB/: .dockerignore  Dockerfile  package-lock.json  package.json
Sync_lip_WEB/app/: app.js  globals.css  page.js
