[metadata]
name = lipsync_app
version = 0.1.0
description = A real-time audio lip-sync application using MuseTalk and Whisper
author = Your Name
author_email = your.email@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = models, face_detection
python_requires = <3.9

[options.extras_require]
# Optional dependencies can be listed here

dependencies =